--- a/01.StacksAndQueues/2.EXER/01/01.csproj
+++ b/01.StacksAndQueues/2.EXER/01/01.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{029F38FA-CD50-4490-A417-E7E629A5A659}</ProjectGuid>
+    <ProjectGuid>{B1D1B962-80AF-4D14-9968-F62B2C4AA2CD}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>StacksAndQueuesEXER</RootNamespace>
-    <AssemblyName>StacksAndQueuesEXER</AssemblyName>
+    <RootNamespace>_01</RootNamespace>
+    <AssemblyName>01</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
