--- a/01.StacksAndQueues/1.LAB/LabProblems/LabProblems.csproj
+++ b/01.StacksAndQueues/1.LAB/LabProblems/LabProblems.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B1A90F62-E293-4814-B939-F58F0138E7C2}</ProjectGuid>
+    <ProjectGuid>{F163AE8E-41F6-49C5-86E7-F68D82BD63A3}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>_01</RootNamespace>
-    <AssemblyName>01</AssemblyName>
+    <RootNamespace>LabProblems</RootNamespace>
+    <AssemblyName>LabProblems</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
