--- a/01.StacksAndQueues/2.EXER/ExerProblems/ExerProblems.csproj
+++ b/01.StacksAndQueues/2.EXER/ExerProblems/ExerProblems.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B1D1B962-80AF-4D14-9968-F62B2C4AA2CD}</ProjectGuid>
+    <ProjectGuid>{6CD65D3D-B766-4EC9-8A8B-FF36ACF83A8F}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>_01</RootNamespace>
-    <AssemblyName>01</AssemblyName>
+    <RootNamespace>ExerProblems</RootNamespace>
+    <AssemblyName>ExerProblems</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
