Exercises problems solve.

--- a/01.StacksAndQueues/1.LAB/ConsoleApp1/ConsoleApp1.csproj
+++ b/01.StacksAndQueues/1.LAB/ConsoleApp1/ConsoleApp1.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0F2612E7-F2FB-475C-BB2A-C6A6D11DF758}</ProjectGuid>
+    <ProjectGuid>{A9D4E816-9EE1-43C9-AE03-B212C58562AA}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>LabProblems</RootNamespace>
-    <AssemblyName>LabProblems</AssemblyName>
+    <RootNamespace>ConsoleApp1</RootNamespace>
+    <AssemblyName>ConsoleApp1</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Startup.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
