--- a/1.CSharp Advanced/01.StacksAndQueuesLAB/LabProblems/LabProblems.csproj
+++ b/1.CSharp Advanced/01.StacksAndQueuesLAB/LabProblems/LabProblems.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Startup.cs" />
+    <Compile Include="StacksAndQueuesLab.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="_01ReverseStrings.cs" />
     <Compile Include="_02SimpleCalculator.cs" />
