--- a/1.CSharp Advanced/02.StacksAndQueuesEXER/ExerProblems/ExerProblems.csproj
+++ b/1.CSharp Advanced/02.StacksAndQueuesEXER/ExerProblems/ExerProblems.csproj
@@ -43,7 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="_03MaximumElement.cs" />
-    <Compile Include="Startup.cs" />
+    <Compile Include="StacksAndQueuesExer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="_01ReverseNumbers.cs" />
     <Compile Include="_02BasicStackOperation.cs" />
